[refactor] Lucene module
- drop dependency on Apache commons-lang3
- refactor AnalyzerConfig.getConstructorParameter and AnalyzerConfig.configureAnalyzer for readability